--- a/.github/workflows/offer_bot_workflow.yml
+++ b/.github/workflows/offer_bot_workflow.yml
@@ -27,28 +27,27 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_PROJECT }}:latest
           build-args: FURY_AUTH=${{ secrets.FURY_AUTH }}
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: executing remote ssh commands to deploy
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.HOST_LISTENING }}
-#          username: ${{ secrets.USER_LISTENING }}
-#          key: ${{ secrets.SSH_KEY }}
-#          passphrase: ${{ secrets.PASSPHRASE }}
-#          script: |
-#            cd infra/
-#            docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
-#            docker-compose down
-#            docker rm $(docker ps -qa)
-#            docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_PROJECT }}
-#            docker-compose up -d --build
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_LISTENING }}
+          username: ${{ secrets.USER_LISTENING }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            cd infra/
+            docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+            docker-compose down
+            docker rm $(docker ps -qa)
+            docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_PROJECT }}
+            docker-compose up -d --build
 
   send_message:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-#    needs: deploy
+    needs: deploy
     steps:
       - name: send message
         uses: appleboy/telegram-action@master
