--- a/.github/workflows/offer_bot_workflow.yml
+++ b/.github/workflows/offer_bot_workflow.yml
@@ -29,12 +29,13 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_LISTENING }}
-          username: ${{ secrets.USER_LISTENING }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
